# netizen_ble

./: .gitignore  PARITY.md  README.md  hacs.json  info.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
custom_components/netizen_ble/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device.py  manifest.json  number.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/netizen_ble/translations/: en.json
examples/: README.md  lovelace_pet_feeder.yaml  template_sensor_schedule.yaml
